idk the previous project, i am lost

--- a/addForm/index.html
+++ b/addForm/index.html
@@ -11,10 +11,16 @@
     
     <form id="customer-form">
         <input type="text" name="name" placeholder="Name">
-        <input type="text" name="age" placeholder="Age">
-        <input type="text" name="salary" placeholder="Salary">
+        <input type="text" name="sub1" placeholder="sub1">
+        <input type="text" name="sub2" placeholder="sub2">
+        <input type="text" name="sub3" placeholder="sub3">
 
         <input type="submit" value="Send">
     </form>
+
+    <div class="result">
+        <ul>
+        </ul>
+    </div>
 </body>
 </html>
